--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "admin",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "start": "concurrently \"npm run build\" \"node dist/out-tsc/server/app.js\"",
+    "build": "npx tsc --watch",
+    "prebuild": "rm -rf dist/out-tsc"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +17,27 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/sequelize": "^4.27.30",
+    "bluebird": "^3.5.2",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "concurrently": "^4.0.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "debug": "^4.1.0",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.0",
+    "helmet": "^3.14.0",
+    "http": "0.0.0",
+    "mysql2": "^1.6.1",
+    "nodemon": "^1.18.5",
     "rxjs": "~6.2.0",
+    "sequelize": "^4.41.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -31,7 +47,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,7 +58,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2"
   }
 }
