1.폴더 구조 변경 2.로그인 구현

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@auth0/angular-jwt": "^2.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
@@ -29,15 +30,23 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "debug": "^4.1.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
     "helmet": "^3.14.0",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.3.0",
+    "jwt-simple": "^0.5.5",
+    "md5": "^2.2.1",
     "mysql2": "^1.6.1",
+    "ngx-bootstrap": "^3.1.1",
+    "ngx-toastr": "^9.1.1",
     "nodemon": "^1.18.5",
     "rxjs": "~6.2.0",
     "sequelize": "^4.41.0",
+    "ts-httpexceptions": "^3.1.0",
+    "ts-md5": "^1.2.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -45,6 +54,7 @@
     "@angular/cli": "~6.2.4",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/crypto-js": "^3.1.43",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
