--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/query-string": "^6.1.1",
     "@types/sequelize": "^4.27.30",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
@@ -43,6 +44,7 @@
     "ngx-bootstrap": "^3.1.1",
     "ngx-toastr": "^9.1.1",
     "nodemon": "^1.18.5",
+    "query-string": "^6.2.0",
     "rxjs": "~6.2.0",
     "sequelize": "^4.41.0",
     "ts-httpexceptions": "^3.1.0",
@@ -51,7 +53,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.4",
+    "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/crypto-js": "^3.1.43",
